# trinary-tree

./: .directory  .gitignore  README.md  pyproject.toml  setup.py
data/cleaned/: iris.csv  life_expectancy.csv  lymphography.csv  seeds.csv  titanic.csv  wine_quality.csv
data/results/: cv_results.csv  cv_results_auto_mpg.csv  cv_results_cement.csv  cv_results_iris.csv  cv_results_life_expectancy.csv  cv_results_lymphography.csv  cv_results_titanic.csv  results_all_balance_scale.csv  results_all_lymphography.csv  results_test_auto_mpg.csv  results_test_boston_housing.csv  results_test_lymphography.csv
example_notebooks/: MCAR_examples.ipynb  MCAR_examples_diabetes.ipynb  MCAR_examples_real.ipynb  MCAR_examples_real_all.ipynb  MCAR_examples_simple.ipynb  MCAR_examples_summarizel.ipynb  data_cleaning.ipynb  simulated_data_example.ipynb  test_splits_for_trinary_weighted.ipynb
example_notebooks/data_cleaned/: auto_mpg.csv  cement.csv  german_credit.csv  glass.csv  glass_cleaned.csv  health_insurance.csv  income_census.csv  ionosphere.csv  kr_vs_kp.csv  letter_cleaned.csv  life_excpectancy.csv  loan.csv  lymphography.csv  satimage.csv  segmentation.csv  (+2 more)
notebooks/: MCAR_examples_real.ipynb  create_results_table.ipynb  cv_test.ipynb  example_script.py  find_error.ipynb  fix_copy_issue.ipynb  lengths.ipynb  merge_results.ipynb  notes_for_cv.ipynb  result_plots.ipynb  stratified_fold_shuffle.ipynb
src/: binary_tree.py  cv_test_pipeline.py  exceptions.py  regression_tree.py  tree.py  trinary_mia_tree.py  trinary_tree.py  weighted_tree.py
tests/: test_tree.py
(+101 files in other folders)
